--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -12,7 +12,7 @@ header .nav-icons{
     justify-content: space-between;
     align-items: center;
     padding:15px 15px 0px 15px;
-    /* background:red; */
+    
     height:45px;
 }   
 
@@ -21,6 +21,11 @@ header .nav-icons{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: black;
+    margin-left: 90px;
+}
+    
+.nav-right{
+    position: relative;
 }
 
 .nav-right a{
@@ -33,6 +38,12 @@ header .nav-icons{
     padding-left: 0;
 }
 
+.nav-right span{
+    position: absolute;
+    right: 70px;
+    top: 6px;
+    font-size: 13px;
+}
 
 .nav-icons .menu{
     font-size:16px;
@@ -47,7 +58,7 @@ header .nav-icons{
 .nav-menu ul {
     display: flex;
     justify-content:center;
-    padding:0 15px 0 0;
+    padding:0;
     width: 100%; 
     height:auto;
     margin: 0;
@@ -155,4 +166,18 @@ header .close{
     header ul.toggle{
         left: 0;
     }
+
+    .nav-right a:nth-child(3) {
+        display:none;
+    }
+    
 } 
+
+@media screen and (max-width:768px){
+    .nav-right span{
+        position: absolute;
+        right: 36px;
+        top: 6px;
+        font-size: 13px;
+    }
+}
