completed header-page

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,10 +1,12 @@
 header{
-    position: relative;
-    min-height: 70px;
-    overflow: hidden;
+    /* position: relative;
+    
     padding:0p 15px;
-    height:90px;
-    border-bottom: 1px solid #000;
+    height:180px;
+    height:auto; */
+    min-height: 70px;
+    z-index: 100;
+
 }
 
 header .nav-icons{
@@ -17,7 +19,7 @@ header .nav-icons{
 }   
 
 .nav-icons .logo a{
-    text-decoration: none;
+    text-decoration: none;  
     text-transform: uppercase;
     letter-spacing: 2px;
     color: black;
@@ -51,11 +53,12 @@ header .nav-icons{
 }
 
 
-/* .nav-menu{
-    
-} */
+.nav-menu{
+    position: static;
+}
 
 .nav-menu ul {
+    /* position:relative; */
     display: flex;
     justify-content:center;
     padding:0;
@@ -65,7 +68,6 @@ header .nav-icons{
 }
 
 .nav-menu ul li{
-    position: relative;
     list-style: none;
     display:inline-block;
 }
@@ -76,63 +78,120 @@ header .nav-icons{
     letter-spacing: 1.3px;
     color: #000;
     font-weight: bold;
-    padding:10px 25px 0 25px;
+    padding:20px;
     font-size: 12px;
 }
 
-.nav-menu ul li a:hover::after{
-    content: '';
-    position: absolute;
-    bottom: -5px;
-    left: 20%;
-    width: 60%;
-    height: 3px;
-    background-color: red;
-    flex-direction: column;
+.nav-menu ul li a:hover{
+    color:red;
 }
+
+.menu__sub ul li a:hover{
+    color: red;
+}
+
 
 
 .nav-menu .close{
     display:none;
 }
 
-/*header nav{
-    display: flex;
+
+.menu__sub{
+    position:absolute;
+    top:87px;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    border-top: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
+    text-align: center;
+    display:none;
 }
-nav ul li{
-    list-style: none;
+ 
+.menu__sub ul{
+    margin: 20px 2% 20px;
+    width: 50%;
     display: inline-block;
+
 }
-nav ul li a{
-    text-decoration: none;
+
+.menu__sub ul li{
+    display: inline-block;
+    white-space: nowrap;
     text-transform: uppercase;
-    color: #555;
-    padding: 0 15px;
+    padding: 10px 0;
+    font-weight: bold;
+    font-size: 13px;
+    margin: 0;
+    width: 32%;
 }
-nav ul li a:hover{
-    color: lightseagreen;
+
+.menu__sub ul li a{
+    padding: 0;
+    text-transform: capitalize;
+    color: #000;
+    letter-spacing:0.5px;
 }
-nav .nav-cart{
-    cursor: pointer;
-    position: relative;
+
+
+.nav-menu li:hover a ~ .menu__sub{
+    display:block;
 }
-nav .nav-cart span{
-    position: absolute;
-    top:-12px;
-    right: -7px;
-    background: crimson;
-    font-size: 20px;
-    color: white;
-    padding: 3px 5px;
-    border-radius: 50%;
-    z-index: -1;
+
+/*.menu__sub--top ul li a{
+    padding: 0;
+    text-transform: capitalize;
+    color: #000;
+    letter-spacing:0.5px;
 }
-header .menu,
-header .close{
-    cursor: pointer;
-    display: none;
-}*/
-@media (max-width: 650px){
+
+.menu__sub--top ul li a:hover{
+    color: red;
+}
+
+.menu__sub--bottom ul li a:hover{
+    color: red;
+}
+
+
+.nav-menu ul li a #footwear:hover + .menu__sub{
+    display:block;
+}
+
+
+.menu__sub--bottom ul{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+.menu__sub--bottom ul li{
+    white-space: nowrap;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 13px;
+    margin: 0;
+    padding:0px 20px;
+    width: 16%;
+    
+}
+
+.menu__sub--bottom ul li a{
+    padding: 0;
+    color: #000;    
+    text-transform: capitalize;
+    letter-spacing:0.5px;
+} */
+
+
+
+
+
+@media screen and (max-width:768px){
     .nav-menu ul{
         position: fixed;
         top:0;
@@ -170,14 +229,60 @@ header .close{
     .nav-right a:nth-child(3) {
         display:none;
     }
-    
-} 
-
-@media screen and (max-width:768px){
     .nav-right span{
         position: absolute;
         right: 36px;
         top: 6px;
         font-size: 13px;
     }
+    
+} 
+
+
+
+ul li {
+    list-style: none;
 }
+
+a{
+    text-decoration: none;
+}
+
+
+
+/*header nav{
+    display: flex;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+}
+nav ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #555;
+    padding: 0 15px;
+}
+nav ul li a:hover{
+    color: lightseagreen;
+}
+nav .nav-cart{
+    cursor: pointer;
+    position: relative;
+}
+nav .nav-cart span{
+    position: absolute;
+    top:-12px;
+    right: -7px;
+    background: crimson;
+    font-size: 20px;
+    color: white;
+    padding: 3px 5px;
+    border-radius: 50%;
+    z-index: -1;
+}
+header .menu,
+header .close{
+    cursor: pointer;
+    display: none;
+}*/
