--- a/src/components/css/Details.css
+++ b/src/components/css/Details.css
@@ -6,14 +6,18 @@
     font-family: 'Cabin', sans-serif;
 }
 
-.details img{
+.details .big-img{
     max-width: 500px;
     min-width: 290px;
-    height: 300px;
+    overflow: hidden;
+    margin: 80px  25px 25px 25px;
+  }
+ .big-img img{
     width: 100%;
+    height: 100%;
+    max-height: 400px;
     display: block;
     object-fit: cover;
-    margin: 50px;
 }
 
 .details .details__content{
@@ -73,8 +77,34 @@
 }
 
 
+
+.thumb{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    cursor: pointer;
+    margin: 10px 0;
+  }
+  .thumb img{
+    width: 90px;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    border: 1px solid #ddd;
+    margin-right: 5px;
+    opacity: 0.7;
+    border-radius: 5px;
+  }
+  .thumb img.active{
+    opacity: 1;
+    border: 1px solid lightseagreen;
+  }
+
+
 @media screen and (max-width:768px){
     .details{
         display:block;
+        margin: 30px;
     }
+    
 }
